Updated JVM options for run.sh.
Signed-off-by: Daniel (dmilith) Dettlaff <dmilith@verknowsys.com>